fix: space alignments in options

--- a/src/options/import-export.scss
+++ b/src/options/import-export.scss
@@ -2,7 +2,7 @@
 @import "../sass-commons/button";
 
 .import-export {
-	margin: 0 0 2rem;
+	margin: 0 0 1.2rem;
 
 	input[type="file"] {
 		@include button;
